# ramulator2

./: .README.md.swp  .clang-format  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  calc_rh_parameters.py  compose-dev.yaml  conanfile.py  docker-compose.yml  example_bh_config.yaml  example_config.yaml  example_config_prac.yaml  example_prac_attacker.trace  example_rh_physaddr.trace  pyproject.toml  requirements-dev.txt
src/addr_mapper/: CMakeLists.txt  addr_mapper.h
src/addr_mapper/impl/: linear_mappers.cpp  rit.cpp  rit.h
src/base/: CMakeLists.txt  base.h  clocked.h  config.cpp  config.h  debug.h  exception.h  factory.cpp  factory.h  logging.cpp  logging.h  param.h  request.cpp  request.h  serialization.h  stats.cpp  stats.h  type.h  utils.cpp  utils.h
src/dram/: CMakeLists.txt  dram.h  lambdas.h  node.h  spec.h
src/dram/impl/: DDR3.cpp  DDR4-RVRR.cpp  DDR4-VRR.cpp  DDR4.cpp  DDR5-RVRR.cpp  DDR5-VRR.cpp  DDR5.cpp  GDDR6.cpp  HBM.cpp  HBM2.cpp  HBM3.cpp  LPDDR5.cpp
src/dram/lambdas/: action.h  power.h  preq.h  rowhit.h  rowopen.h
src/dram_controller/: CMakeLists.txt  bh_controller.h  bh_scheduler.h  controller.h  plugin.h  refresh.h  rowpolicy.h  scheduler.h
src/dram_controller/impl/: bh_dram_controller.cpp  dummy_controller.cpp  generic_dram_controller.cpp  prac_dram_controller.cpp
src/dram_controller/impl/plugin/: aqua.cpp  cmd_counter.cpp  graphene.cpp  hydra.cpp  oracle_rh.cpp  para.cpp  rfm_manager.cpp  rrs.cpp  trace_recorder.cpp  trr.cpp  twice.cpp
src/dram_controller/impl/plugin/bliss/: bliss.cpp  bliss.h
src/dram_controller/impl/plugin/blockhammer/: blockhammer.cpp  blockhammer.h  blockhammer_throttler.h  blockhammer_util.h
src/dram_controller/impl/plugin/device_config/: device_config.cpp  device_config.h
src/dram_controller/impl/plugin/prac/: prac.cpp  prac.h
src/dram_controller/impl/refresh/: all_bank_refresh.cpp  per_bank_refresh.cpp  same_bank_refresh.cpp
src/dram_controller/impl/rowpolicy/: basic_rowpolicies.cpp
src/dram_controller/impl/scheduler/: bh_scheduler.cpp  bliss_scheduler.cpp  blocking_scheduler.cpp  generic_scheduler.cpp  prac_scheduler.cpp
src/example/: CMakeLists.txt  example_ifce.h
src/example/impl/: another_impl.cpp  complicated_impl.cpp  complicated_impl.h  example_impl.cpp  example_serialization.cpp  yetanother_impl.cpp
src/frontend/: CMakeLists.txt  frontend.h
src/frontend/impl/external_wrapper/: gem5_frontend.cpp
src/frontend/impl/memory_trace/: loadstore_trace.cpp  loadstoredata_trace.cpp  mess_trace_generator.cpp  readwrite_trace.cpp
src/frontend/impl/processor/bhO3/: bhO3.cpp  bhO3.h  bhcore.cpp  bhcore.h  bhllc.cpp  bhllc.h
src/frontend/impl/processor/simpleO3/: core.cpp  core.h  llc.cpp  llc.h  simpleO3.cpp  trace.cpp  trace.h
src/memory_system/: CMakeLists.txt  bh_memory_system.h  memory_system.h
src/memory_system/impl/: bh_DRAM_system.cpp  dummy_memory_system.cpp  generic_DRAM_system.cpp
src/ramulator/base/: CMakeLists.txt  base.h  config.cpp  config.h  config_node.h  debug.h  factory.cpp  factory.h  function_ref.h  logger.cpp  logger.h  param.h  request.cpp  request.h  stats.h  type.h  utils.cpp  utils.h
src/ramulator/controller/: CMakeLists.txt  controller_base.cpp  controller_base.h  i_controller.h
src/ramulator/controller/addr_mapper/: addr_mapper_base.cpp  addr_mapper_base.h  i_addr_mapper.h
src/ramulator/controller/addr_mapper/impl/: ch_ra_ba_ro_co.cpp  direct_mapper.cpp  mop4clxor.cpp  passthrough_addr_mapper.cpp  rit_addr_mapper.cpp  rit_addr_mapper.h  ro_ba_ra_co_ch.cpp
src/ramulator/controller/impl/: blockhammer_controller.cpp  gddr7_controller.cpp  generic_ddr_controller.cpp  hbm12_controller.cpp  hbm34_controller.cpp  hbm_controller.cpp  hbm_controller_base.cpp  hbm_controller_base.h  lpddr5_controller.cpp  lpddr6_controller.cpp  lpddr_controller_base.cpp  lpddr_controller_base.h  prac_controller.cpp
src/ramulator/controller/plugin/: controller_validation_hook.h  i_controller_plugin.h
src/ramulator/controller/plugin/impl/: aqua.cpp  bin_trace_recorder.cpp  cmd_trace_recorder.cpp  command_counter.cpp  graphene.cpp  hydra.cpp  hynix_trr.cpp  ideal_trr.cpp  issued_command_validation_hook.cpp  live_trace_streamer.cpp  oracle_rh.cpp  para.cpp  rfm_manager.cpp  rrs.cpp  samsung_trr.cpp  twice.cpp
src/ramulator/controller/refresh/: i_refresh_manager.h
src/ramulator/controller/refresh/impl/: all_bank.cpp  hbm34_per_bank_refresh.cpp  no_refresh.cpp  per_bank.cpp
src/ramulator/controller/rowpolicy/: i_row_policy.h
src/ramulator/controller/rowpolicy/impl/: closed_cap.cpp  open.cpp
src/ramulator/controller/scheduler/: i_scheduler.h
src/ramulator/controller/scheduler/impl/: frfcfs.cpp  frfcfs_rowhit.cpp
src/ramulator/dram/: CMakeLists.txt  device.cpp  device.h  dram_spec.cpp  dram_spec.h  func_types.h  node.cpp  node.h
src/ramulator/dram/commands/: ACT.h  ACT1.h  ACT2.h  CAS.h  CAS_RD.h  CAS_WR.h  PREab.h  PREpb.h  RCKSTOP.h  RCKSTRT.h  RD.h  RDA.h  RDA_L.h  RDA_S.h  RD_L.h  RD_S.h  REFab.h  REFpb.h  RFMab.h  RFMpb.h  VRR.h  WR.h  WRA.h  WRA_L.h  WRA_S.h  WR_L.h  WR_S.h  populate.h
src/ramulator/dram/impl/: DDR3.cpp  DDR4.cpp  DDR4_VRR.cpp  DDR5.cpp  DDR5_RFM.cpp  DDR5_RFM_VRR.cpp  DDR5_VRR.cpp  GDDR6.cpp  GDDR7.cpp  HBM1.cpp  HBM2.cpp  HBM3.cpp  HBM4.cpp  LPDDR5.cpp  LPDDR6.cpp
src/ramulator/frontend/: CMakeLists.txt  i_frontend.h
src/ramulator/frontend/impl/: external.cpp
src/ramulator/frontend/impl/memory_trace/: latency_throughput_trace.cpp  loadstore_trace.cpp  readwrite_trace.cpp
src/ramulator/frontend/impl/processor/bhO3/: bhO3.cpp  bhO3.h  bhcore.cpp  bhcore.h  bhllc.cpp  bhllc.h
src/ramulator/memory_system/: CMakeLists.txt  i_memory_system.h
src/ramulator/memory_system/channel_mapper/: i_channel_mapper.h
src/ramulator/memory_system/channel_mapper/impl/: cache_line_interleave.cpp  channel_mappers.cpp  passthrough_channel_mapper.cpp
src/ramulator/memory_system/impl/: generic_dram_system.cpp
src/translation/: CMakeLists.txt  translation.h
src/translation/impl/: no_translation.cpp  random_translation.cpp
(+622 files in other folders)
